--- a/BotConsole/BotConsole.csproj
+++ b/BotConsole/BotConsole.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
     <PackageReference Include="Remora.Discord" Version="2023.1.0" />
   </ItemGroup>
